[package]
name = "tiny-ray"
version = "0.1.0"
edition = "2021"
license = " AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.23"
clap = "4.0.32"
png = "0.17.7"
palette = "0.6.1"
rayon = "1.6.1"
rand = "0.8.5"
